# tb3_formation

./: .gitignore  README.md
config/: control_config.yml  formation_config.yml
scripts/: plot_err.py  plot_err2.py  tanh_compare.py
sim_log/20250702_100954/: control_log.csv
sim_log/20250702_101716/: control_log.csv
sim_log/20250917_143118/: control_log.csv
sim_log/BETA=0/: control_log.csv
sim_log/BETA=0.5/: control_log.csv
sim_log/K=1/: control_log.csv
sim_log/K=10/: control_log.csv
sim_log/K=20/: control_log.csv
sim_log/K=3/: control_log.csv
src/DynamixelSDK/python/: setup.py
src/DynamixelSDK/python/tests/: protocol_combined.py
src/DynamixelSDK/python/tests/protocol1_0/: bulk_read.py  (+4 more)
src/fm2/: CMakeLists.txt  package.xml
src/fm2/src/: control_node.cc
src/fm_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/fm_control/src/: control_node.py  sensor_node.py  test_subscriber.py
src/fm_control/src/common/: utils.py
src/fmtctr/: package.xml  setup.cfg  setup.py
src/fmtctr/src/: control_node.py  sensor_node.py  test_subscriber.py
src/formation_controller/: package.xml  setup.cfg  setup.py
src/formation_controller/formation_controller/: GlobalParams.json  config.yml  control_node.py  fc2_basic.py  fc3.py  sensor_node.py
src/turtlebot3/turtlebot3_bringup/launch/: robot.launch.py  rviz2.launch.py  turtlebot3_state_publisher.launch.py
src/turtlebot3/turtlebot3_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/turtlebot3/turtlebot3_example/: setup.py
src/turtlebot3/turtlebot3_teleop/: setup.py
(+43 files in other folders)
